Enhance security and performance: - Add environment variable support for JWT and database configurations. - Implement file upload validation to prevent malicious uploads. - Update README with security setup instructions. - Add performance indexes to improve query efficiency.